videoserver-HMW2/k8s/production/proxy/nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - port: 80
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
      matchLabels:
          app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: m1c0l/videoserver_apigw:v2 
        ports:
        - containerPort: 80
        volumeMounts:
            - mountPath: /Storage
              name: storage
      volumes:
      - name: storage
        hostPath:
            path: /data/vsStorage
            type: DirectoryOrCreate
