videoserver-HMW2/k8s/production/proxy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: videoserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "90m"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "90m"
    nginx.ingress.kubernetes.io/send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "5000m"
#   nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
  - host: videoserver.localhost
    http:
      paths:
      - path:
        backend:
          serviceName: nginx
          servicePort: 80
